Revision history for DBIx::Class

        - added GROUP BY and DISTINCT support
        - hacked around SQL::Abstract::Limit some more in DBIC::SQL::Abstract
          (this may have fixed complex quoting)
        - moved inflation to inflate_result in Row.pm
        - added $rs->search_related
        - split compose_namespace out of compose_connection in Schema

0.04999_01 2005-12-27 03:33:42
        - search and related methods moved to ResultSet
        - select and as added to ResultSet attrs
        - added DBIx::Class::Table and TableInstance for table-per-class
        - added DBIx::Class::ResultSetInstance which handles proxying
          search etc. as a superclass of DBIx::Class::DB
        - assorted test and code cleanup work

0.04001 2005-12-13 22:00:00
        - Fix so set_inflated_column calls set_column
        - Syntax errors in relationship classes are now reported
        - Better error detection in set_primary_key and columns methods
        - Documentation improvements
        - Better transaction support with txn_* methods
        - belongs_to now works when $cond is a string
        - PK::Auto::Pg updated, only tries primary keys instead of all cols

0.04 2005-11-26
        - Moved get_simple and set_simple into AccessorGroup
        - Made 'new' die if given invalid columns
        - Added has_column and column_info to Table.pm
        - Refactored away from direct use of _columns and _primaries
        - Switched from NEXT to Class::C3

0.03004
        - Added an || '' to the CDBICompat stringify to avoid null warnings
	- Updated name section for manual pods
	
0.03003 2005-11-03 17:00:00
        - POD fixes.
        - Changed use to require in Relationship/Base to avoid import.

0.03002 2005-10-20 22:35:00
        - Minor bugfix to new (Row.pm)
        - Schema doesn't die if it can't load a class (Schema.pm)
        - New UUID columns plugin (UUIDColumns.pm)
        - Documentation improvements.

0.03001 2005-09-23 14:00:00